Add shielding unit object, fix several bugs Jun reported.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -42,6 +42,16 @@ Current tasks:
     - Make sure hitRay/hitCircle apply to enemies with special hit detection.
         - Add function for testing any hit properties for intersection against a hit box and use that in onHit logic.
 
+    - Forge
+        - Stair case on rails that can be pushed with mitts.
+        - Central chamber with moveable stairs and multiple checks
+        - Use portals to go to material world and drain lava to progress in the dungeon 4 times
+            - At entrance
+            - To get to big key
+            - To get to big chest
+            - To get to boss
+        - Gold mail offered by NPC if you bring gold ore and 500 money
+
     - When hero/clone is falling, draw it behind all other sprites (on top of the background).
         - Try using getDrawPriority to apply this to clone, we may need a new priority 'afterBackground' to force it to draw on top of all background elements (for example, it should be drawn on top of pit entrance objects).
         - The hero itself will probably need special handling to render it immediately after the background in renderField since it always has special handling.
