--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,6 +39,16 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Fix cannot melt lake ice with fire element any more.
+    - Gauntlet water area has wrong music.
+    - Hot overlay doesn't render during transition to spirit world.
+    - Prevent jumping north into southern facing walls
+    - Iron skin should protect spirit energy from burning damage
+    - Possibly reduce the rate of burning damage from hot rooms
+    - Clear burn duration on death/revive
+    - Fix loot on staff causes the loot to move in strange ways
+    - Make sure hero can fall into a 1x1 pit while wearing the cloak
+    - Fix defeated enemies are briefly visible during screen transitions.
 
     - Add hot logic to doors which will make them render warning state that the connected area is super hot.
         - Maybe just use flame particles for this for now.
